--- a/event/config/locales/ems.de.yml
+++ b/event/config/locales/ems.de.yml
@@ -47,7 +47,7 @@ de:
     registration_is_reviewing: Your registration is being reviewed.
     registration_is_rejected: Your registration has been rejected.
     registration_is_waitlisted: You have been placed on a waitlist.
-    registration_is_canceled: Your registration can been canceled.
+    registration_is_canceled: Your registration has been canceled.
     registration_is_refunded: Your registration has been refunded.
 
   activerecord:
