Add russian translations

--- a/core/config/locales/simple_form.ru.yml
+++ b/core/config/locales/simple_form.ru.yml
@@ -13,14 +13,13 @@ ru:
     # Labels and hints examples
     # labels:
     #   defaults:
-    #     password: 'Password'
+    #     password: 'Пароль'
     #   user:
     #     new:
-    #       email: 'E-mail to sign in.'
+    #       email: 'E-mail для входа.'
     #     edit:
     #       email: 'E-mail.'
     # hints:
     #   defaults:
-    #     username: 'User name to sign in.'
-    #     password: 'No special characters, please.'
-
+    #     username: 'Имя пользователя для входа.'
+    #     password: 'Никаких специальных символов, пожалуйста.'
