--- a/core/config/locales/custom.ru.yml
+++ b/core/config/locales/custom.ru.yml
@@ -1,12 +1,12 @@
 ru:
   language:
-    general: Language
-    en: English
-    de: German
-    cs: Czech
-    ja: Japanese
-    fi: Finnish
-    ru: Russian
+    general: язык
+    en: английский
+    de: Немецкий
+    cs: чешский язык
+    ja: японский язык
+    fi: финский
+    ru: русский
 
   date:
     formats:
@@ -29,64 +29,63 @@ ru:
   english: "English"
 
   core:
-    next_page: "Next <i class='fa fa-angle-right'></i>"
-    prev_page: "<i class='fa fa-angle-left'></i> Previous"
-    login: Login
-    logout: Logout
-    account: My Account
-    errors_below: Please review the problems below
-    login_required: Please login to your account first
-    resource_invalid: Requested page is not available in your account
-    create_account: Create Account
+    next_page: "следующий <i class='fa fa-angle-right'></i>"
+    prev_page: "<i class='fa fa-angle-left'></i> предыдущий"
+    login: Авторизоваться
+    logout: Выйти
+    account: Мой аккаунт
+    errors_below: Пожалуйста, рассмотрите проблемы ниже
+    login_required: Пожалуйста, войдите сначала в свой аккаунт
+    resource_invalid: Запрашиваемая страница недоступна в вашем аккаунте
+    create_account: Создать учетную запись
 
-    confirmation_email_1: 'Thank you for registering for an account on %{value}'
-    confirmation_email_2: 'Please click on the following link to complete your registration:'
-    confirmation_email_3: 'Thank you!'
-    confirmation_email_link: Confirm my account
-    reset_password_email_1: 'Hello %{value}'
-    reset_password_email_2: 'Someone has requested a link to change your password, and you can do this through the link below.'
-    reset_password_email_3: "If you didn't request this, please ignore this email."
-    reset_password_email_4: "Your password won't change until you access the link above and create a new one."
-    reset_password_email_link: Change my password
-    unlock_email_1: 'Hello %{value}'
-    unlock_email_2: 'Your account has been locked due to an excessive amount of unsuccessful sign in attempts.'
-    unlock_email_3: "Click the link below to unlock your account"
-    unlock_email_link: Unlock my account
+    confirmation_email_1: 'Спасибо за регистрацию для учетной записи на %{value}'
+    confirmation_email_2: 'Пожалуйста, нажмите на следующую ссылку, чтобы завершить регистрацию:'
+    confirmation_email_3: ‘Спасибо!'
+    confirmation_email_link: Подтвердите мой аккаунт
+    reset_password_email_1: 'Привет %{value}'
+    reset_password_email_2: 'Кто-то запросил ссылку для изменения вашего пароля, и вы можете сделать это по ссылке ниже.'
+    reset_password_email_3: "Если вы не просили об этом, пожалуйста, игнорируйте это письмо."
+    reset_password_email_4: "Ваш пароль не изменится, пока вы не перейдете по ссылке выше и не создадите новый."
+    reset_password_email_link: Изменить свой пароль
+    unlock_email_1: 'Привет %{value}'
+    unlock_email_2: 'Ваш аккаунт заблокирован из-за чрезмерного количества неудачных попыток входа.'
+    unlock_email_3: "Нажмите на ссылку ниже, чтобы разблокировать свой аккаунт"
+    unlock_email_link: Разблокировать мой аккаунт
 
     profile_full_name: "%{firstname} %{lastname}"
-    profile_email: Email
-    profile_password: Password
-    profile_password_confirmation: Password Confirmation
-    profile_current_password: Current Password
-    profile_first_name: First Name
-    profile_last_name: Last Name
-    profile_address: Address
-    profile_address2: Address
-    profile_city: City
-    profile_state: State
-    profile_country: Country
-    profile_zipcode: Zipcode
-    profile_public_name: Public Name
-    profile_update_btn: Update
-    profile_account_settings: Account Settings
-    profile_details_settings: 'Public / Private Profile'
-    profile_public_title: Public Profile
-    profile_public_explanation: 'The following information will be visible to other people, such as posts in the forum or comments in the blog.'
-    profile_public_upload: Photo
-    profile_public_upload_help: 'Upload a photo for use in your public profile (gif, jpg, png)'
-    profile_private_title: Private Profile
-    profile_private_explanation: 'This information will be kept private and not shared with anyone.'
-    profile_account_title: "Update Email / Account Login"
-    profile_account_explanation: "Remember: next time you login, you will use your updated email address."
-    profile_account_password_title: Change Your Password
-    profile_account_password_current_title: Current Password
-    profile_account_password_current_explanation: Your current password is required to make any changes.
-    profile_profile_updated: Your profile has been updated
-    profile_email_confirmation: An email has been sent to the new email address - you must click on the confirmation link before you can login using the new email address
-    profile_password_updated: Your password has been updated
-    profile_email_needs_confirmation: 'Your email address has already been changed to'
-    profile_email_needs_confirmation_2: 'An email was sent to that address for confirmation.  If you did not receive the confirmation email, simply update the email again to re-send the confirmation.'
+    profile_email: Эл. адрес
+    profile_password: пароль
+    profile_password_confirmation: Подтверждение пароля
+    profile_current_password: Текущий пароль
+    profile_first_name: Имя
+    profile_last_name: Фамилия
+    profile_address: Адрес
+    profile_address2: Адрес
+    profile_city: город
+    profile_state: государственный
+    profile_country: Страна
+    profile_zipcode: Почтовый индекс
+    profile_public_name: Публичное имя
+    profile_update_btn: Обновить
+    profile_account_settings: Настройки аккаунта
+    profile_details_settings: 'Общедоступный профиль / Частный профиль '
+    profile_public_title: Общедоступный профиль
+    profile_public_explanation: 'Следующая информация будет видна другим людям, например, сообщения на форуме или комментарии в блоге.'
+    profile_public_upload: Фото
+    profile_public_upload_help: 'Загрузите фотографию для использования в вашем общедоступном профиле (gif, jpg, png)'
+    profile_private_title: Частный профиль
+    profile_private_explanation: 'Эта информация будет храниться в тайне и никому не передаваться.'
+    profile_account_title: "Обновление адреса электронной почты / учетной записи"
+    profile_account_explanation: "Помните: при следующем входе в систему вы будете использовать ваш обновленный адрес электронной почты."
+    profile_account_password_title: Поменяйте ваш пароль
+    profile_account_password_current_title: Текущий пароль
+    profile_account_password_current_explanation: Ваш текущий пароль необходим для внесения любых изменений.
+    profile_profile_updated: Ваш профиль был обновлен
+    profile_email_confirmation: Письмо было отправлено на новый адрес электронной почты - вы должны нажать на ссылку подтверждения, прежде чем войти в систему, используя новый адрес электронной почты
+    profile_password_updated: Ваш пароль был обновлен     profile_email_needs_confirmation: 'Ваш адрес электронной почты уже был изменен на'
+    profile_email_needs_confirmation_2: 'Письмо было отправлено на этот адрес для подтверждения. Если вы не получили подтверждение по электронной почте, просто обновите его еще раз, чтобы отправить подтверждение еще раз.'
 
   email:
-    salutation: "Dear %{value},"
-    thank_you: Thank you
+    salutation: "дорогая %{value},"
+    thank_you: Спасибо
