--- a/lms/config/locales/lms.ru.yml
+++ b/lms/config/locales/lms.ru.yml
@@ -1,20 +1,20 @@
 ru:
   lms:
-    quiz_feedback_instructions_incorrect: Choose how difficult this question was to advance to the next card
-    quiz_feedback_instructions_correct: Choose how difficult this question was to advance to the next card
-    quiz_feedback_button_incorrect_almost: Almost Got It
-    quiz_feedback_button_incorrect_no_idea: I Had No Idea
-    quiz_feedback_button_correct_easy: That Was Easy
-    quiz_feedback_button_correct_not_easy: I Had to Think About It
-    quiz_congratulations_1: Congratulations!  You are ready for the next lesson
+    quiz_feedback_instructions_incorrect: Выберите, насколько сложным был этот вопрос, чтобы перейти к следующей карточке
+    quiz_feedback_instructions_correct: Выберите, насколько сложным был этот вопрос, чтобы перейти к следующей карточке
+    quiz_feedback_button_incorrect_almost: Почти понял
+    quiz_feedback_button_incorrect_no_idea: Не имел представления
+    quiz_feedback_button_correct_easy: Это было просто
+    quiz_feedback_button_correct_not_easy: Я должен был думать об этом
+    quiz_congratulations_1: Поздравляем! Вы готовы к следующему уроку
     quiz_congratulations_2: "(or you can %{link})"
-    quiz_congratulations_take_quiz_again: take the quiz again
-    quiz_progress_status: "Completed %{num} out of %{total}"
+    quiz_congratulations_take_quiz_again: пройти тест снова
+    quiz_progress_status: "Завершено% {num} из% {total}"
 
-    subscription_required: Subscription Required
+    subscription_required: Требуется подписка
 
     course:
-      next_button: Complete and Continue
-      next_button_complete: Course Completed!
-      previous_button: Previous Lecture
-      previous_button_welcome: Welcome to the Course!
+      next_button: Завершить и продолжить
+      next_button_complete: Курс завершен!
+      previous_button: Предыдущая лекция
+      previous_button_welcome: Добро пожаловать на курс!
