Fix russian locale loading

--- a/core/config/locales/custom.ru.yml
+++ b/core/config/locales/custom.ru.yml
@@ -83,7 +83,8 @@ ru:
     profile_account_password_current_explanation: Ваш текущий пароль необходим для внесения любых изменений.
     profile_profile_updated: Ваш профиль был обновлен
     profile_email_confirmation: Письмо было отправлено на новый адрес электронной почты - вы должны нажать на ссылку подтверждения, прежде чем войти в систему, используя новый адрес электронной почты
-    profile_password_updated: Ваш пароль был обновлен     profile_email_needs_confirmation: 'Ваш адрес электронной почты уже был изменен на'
+    profile_password_updated: Ваш пароль был обновлен
+    profile_email_needs_confirmation: 'Ваш адрес электронной почты уже был изменен на'
     profile_email_needs_confirmation_2: 'Письмо было отправлено на этот адрес для подтверждения. Если вы не получили подтверждение по электронной почте, просто обновите его еще раз, чтобы отправить подтверждение еще раз.'
 
   email:
